# glovo-api-python

./: .bandit  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  Pipfile  README.md  pyproject.toml  requirements.dev.txt  requirements.tox.txt  requirements.txt  setup.cfg  setup.py  tox.ini
glovo_api_python/: client.py  errors.py  utils.py  version.py
glovo_api_python/constants/: __init__.py  error_codes.py  stages.py  status_codes.py  urls.py
glovo_api_python/resources/: __init__.py  base.py  data_structures.py  order.py  working_area.py
tests/: conftest.py  test_client.py  test_orders.py  test_version.py  test_working_areas.py
tests/cassettes/: OrdersTest.test_order_estimate_status_code.yaml  OrdersTest.test_order_list_status_code.yaml  OrdersTest.test_order_read_status_code.yaml  WorkingAreasTest.test_working_area_response_status_code.yaml
